--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,11 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./header_footer.css">
+    <title>Login</title>
 </head>
+
 <body>
-    
+    <div id="body">
+        <div id="left">
+            <div>
+                <h1>Log in</h1>
+                <div id="form_div">
+                    <form action="" id="form">
+                        <input type="text" id="email" placeholder="Email address">
+                        <input type="text" id="password" placeholder="Password">
+                        <input id="submit_btn" type="submit" value="Log In">
+                    </form>
+                </div>
+                <div style="border-top: 1px solid rgb(206, 206, 206); width: 95%; margin: auto; margin-bottom: 50px;">
+                </div>
+                <div id="links">
+                    <div class="login_link">Email me a login link</div>
+                    <div class="login_link"><img id="gic" src="./GoogleIcon.png" alt="">Sign in with Google</div>
+                </div>
+            </div>
+        </div>
+        <div id="right">
+            <img src="./Login&Signin.jpg" alt="Login Image">
+        </div>
+    </div>
+    <div id="footer">
+        <table class="ftr">
+            <thead>
+                <th>Use Eventbrite</th>
+                <th>Plan Events</th>
+                <th>Find Events</th>
+                <th>Connect With Us</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <a href="">Create Events</a>
+                    </td>
+                    <td>
+                        <a href="">Sell Tickets Online</a>
+                    </td>
+                    <td>
+                        <a href="">New Orleans Food & Drink Events</a>
+                    </td>
+                    <td>
+                        <a href="">Contact Support</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Pricing</a>
+                    </td>
+                    <td>
+                        <a href="">Event Planning</a>
+                    </td>
+                    <td>
+                        <a href="">San Francisco Holiday Events</a>
+                    </td>
+                    <td>
+                        <a href="">Twitter</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Eventbrite Boost</a>
+                    </td>
+                    <td>
+                        <a href="">Sell Concert Tickets Online</a>
+                    </td>
+                    <td>
+                        <a href="">Tulum Music Events</a>
+                    </td>
+                    <td>
+                        <a href="">Facebook</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Pricing</a>
+                    </td>
+                    <td>
+                        <a href="">Event Planning</a>
+                    </td>
+                    <td>
+                        <a href="">San Francisco Holiday Events</a>
+                    </td>
+                    <td>
+                        <a href="">Twitter</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Eventbrite Mobile Ticket App</a>
+                    </td>
+                    <td>
+                        <a href="">Event Payment System</a>
+                    </td>
+                    <td>
+                        <a href="">Denver Hobby Events</a>
+                    </td>
+                    <td>
+                        <a href="">LinkedIn</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Eventbrite Check-In App</a>
+                    </td>
+                    <td>
+                        <a href=""></a>
+                    </td>
+                    <td>
+                        <a href="">Solutions for Professional Services</a>
+                    </td>
+                    <td>
+                        <a href="">Atlanta Pop Music Events</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Instagram</a>
+                    </td>
+                    <td>
+                        <a href="">Eventbrite App Marketplace</a>
+                    </td>
+                    <td>
+                        <a href="">Event Management Software</a>
+                    </td>
+                    <td>
+                        <a href="">New York Events</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Pricing</a>
+                    </td>
+                    <td>
+                        <a href="">Event Planning</a>
+                    </td>
+                    <td>
+                        <a href="">San Francisco Holiday Events</a>
+                    </td>
+                    <td>
+                        <a href="">Twitter</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Pricing</a>
+                    </td>
+                    <td>
+                        <a href="">Event Planning</a>
+                    </td>
+                    <td>
+                        <a href="">San Francisco Holiday Events</a>
+                    </td>
+                    <td>
+                        <a href="">Twitter</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="">Pricing</a>
+                    </td>
+                    <td>
+                        <a href="">Event Planning</a>
+                    </td>
+                    <td>
+                        <a href="">San Francisco Holiday Events</a>
+                    </td>
+                    <td>
+                        <a href="">Twitter</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <script src="./login.js"></script>
 </body>
+
 </html>
